# rusty-tip

./: .gitignore  ARCHITECTURE.md  BUILD_WINDOWS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  Code_Simplification_Proposal.md  LICENSE  README.md  REWRITE_PLAN.md  TODO.md  action_log_demo.json  action_log_demo.jsonl  dist-workspace.toml  flake.nix  machine-info.txt  test.nix  tip_prep_no_stability.toml
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: publish-crates.yml
.helix/: languages.toml
configs/: comprehensive_config.toml  tip_prep_fixed_8v.toml  tip_prep_no_stability.toml  tip_prep_with_stability.toml
docs/: REWRITE_PLAN.md  signal_management.md
examples/: auto_approach_with_center.rs  base_config.toml  boundary_monitor_demo.rs  builder_patterns_demo.rs  ch1_reader.rs  comprehensive_config.toml  continuous_plotter.rs  debug_tip_state.rs  egui_scan_reader.rs  enhanced_tip_controller.rs  example_config.toml  executor_test.rs  format_demo.rs  get_signals.rs  logging_demo.rs  machine_demo.rs  machine_test.rs  machine_tests.rs  osci_continuity_analysis.rs  osci_demo.rs  oscilloscope_comparison.rs  oscilloscope_simple.rs  plot.typ  plotting_agent.rs  plotting_demo.rs  pulse_test.rs  real_time_boundary_monitor.rs  scan_heatmap_plotter.rs  signal_monitor_test.rs  signal_plotter.rs  signal_registry.rs  signal_timing_benchmark.rs  signal_timing_oscilloscope.rs  signals_rt_demo.rs  simple_client_test.rs  simple_dual_client_test.rs  simple_tcp_driver.rs  simple_tip_prep.rs  small_agent.rs  tcp_logger_demo.rs  (+18 more)
examples/history/: 2025-08-06T13-17-01.jsonl  2025-08-09T17-43-00.jsonl  2025-08-09T17-45-38.jsonl  2025-08-09T18-20-00.jsonl  2025-08-09T18-22-09.jsonl
examples/plotting/: tip_prep.typ
experiments/: tip_prep_20251020_122856.json  tip_prep_20251211_125932.json  tip_prep_20251211_125947.json  tip_prep_20251211_130851.json  tip_prep_20251211_132342.json
obsidian/: README.md  TODO.md  index.canvas
obsidian/.obsidian/: appearance.json
obsidian/.trash/: BiasVoltage.md  README.md
obsidian/enums/: ActionType.md  NanonisError.md  NanonisValue.md  PolicyDecision.md  TipState.md
obsidian/info/: AFM Machine Info.md
obsidian/structs/: ActionDriver.md  BoundaryClassifier.md  BufferedTCPReader.md  Controller.md  ExperimentData.md  MachineState.md  NanonisClient.md  RuleBasedPolicy.md  SessionMetadata.md  SyncSignalMonitor.md  TCPLoggerConfig.md  TimestampedFrame.md
obsidian/traits/: DiskWriter.md  ExplainablePolicyEngine.md  LearningPolicyEngine.md  PolicyEngine.md  StateClassifier.md
settings/: layout_tip-prep.lyt  settings_tip-prep.ini
src/: action_driver.rs  action_sequence.rs  actions.rs  afm_controller.rs  buffered_tcp_reader.rs  classifier.rs  client.rs  config.rs  controller.rs  controller_types.rs  error.rs  job.rs  lib.rs  lib_old.rs  logger.rs  machine.rs  machine_state.rs  mock_controller.rs  nanonis_controller.rs  plotting.rs  policy.rs  protocol.rs  signal_monitor.rs  signal_registry.rs  spm_controller.rs  spm_error.rs  tip_controller.rs  tip_prep.rs  tip_prep.rs2SkRvd.bck  tui.rs  types.rs  utils.rs
src/action/: bias.rs  context.rs  data_stream.rs  mod.rs  motor.rs  oscilloscope.rs  (+10 more)
tests/: tip_prep_routine.rs
(+39 files in other folders)
