[package]
name = "rusty-tip"
version = "0.0.2"
edition = "2021"
description = "Rust library for Nanonis SPM system control via TCP"
repository = "https://github.com/kronberger-droid/rusty-tip"
license = "MIT"
authors = ["Martin Kronberger <kronberger@proton.me"]

[lib]
name = "rusty_tip"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
textplots = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
serde_json = "1.0"
ndarray = "0.16.1"
ctrlc = "3.4"
parking_lot = "0.12"
config = { version = "0.15.18", features = [ "toml" ] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "wincon", "handleapi", "winbase"] }
