[package]
name = "rusty-tip"
version = "0.0.3"
edition = "2021"
description = "Rust library for Nanonis SPM system control via TCP"
repository = "https://github.com/kronberger-droid/rusty-tip"
license = "MIT"
authors = ["Martin Kronberger <kronberger@proton.me"]

[lib]
name = "rusty_tip"
path = "src/lib.rs"

[[bin]]
name = "tip-prep"
path = "bin/tip-prep/main.rs"

[[bin]]
name = "tip-prep-gui"
path = "bin/tip-prep-gui/main.rs"
required-features = ["gui"]

[dependencies]
nanonis-rs = "0.1.0"
byteorder = "1.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
textplots = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
serde_json = "1.0"
ndarray = "0.16.1"
ctrlc = "3.4"
parking_lot = "0.12"
config = { version = "0.15.18", features = [ "toml" ] }
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "wincon", "handleapi", "winbase"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33", optional = true }
egui_plot = { version = "0.34", optional = true }
rfd = { version = "0.17", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = []
gui = ["eframe", "egui_plot", "rfd", "toml"]
